force-app/main/default/objects/Contact/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <formula>CASE( Account.RecordTypeId, &quot;012d000000097TK&quot;, &quot;Household Account&quot;, 
&quot;012d000000097TF&quot;, &quot;Organization Account&quot;,

&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>