force-app/main/default/objects/Contact/fields/Benefits_health_insurance_included__c.field-meta.xml
<CustomField>
    <fullName>Benefits_health_insurance_included__c</fullName>
    <label>Benefits (health insurance included)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>