force-app/main/default/objects/Contact/fields/Community_User_Status__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Status__c</fullName>
    <label>Community User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>