force-app/main/default/objects/Contact/fields/Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>Contact_Age__c</fullName>
    <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>