force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>No Longer With</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>