force-app/main/default/objects/Contact/fields/Contactuser__c.field-meta.xml
<CustomField>
    <fullName>Contactuser__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Contactuser</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>