force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County field included in address section of Account and Contact page layouts.</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>