force-app/main/default/objects/Contact/fields/Date_employed_in_healthcare_field__c.field-meta.xml
<CustomField>
    <fullName>Date_employed_in_healthcare_field__c</fullName>
    <label>Date employed in healthcare field</label>
    <type>Date</type>
</CustomField>