force-app/main/default/objects/Contact/fields/Date_passed_state_exam__c.field-meta.xml
<CustomField>
    <fullName>Date_passed_state_exam__c</fullName>
    <label>Date passed state exam</label>
    <type>Date</type>
</CustomField>