force-app/main/default/objects/Contact/fields/Delta_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Delta_Data_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
    <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
    <label>Delta Data Migration</label>
    <type>Checkbox</type>
</CustomField>