force-app/main/default/objects/Contact/fields/Do_Not_Text__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Text</label>
    <type>Checkbox</type>
</CustomField>