force-app/main/default/objects/Contact/fields/Eligibility_for_economic_need_Student__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_for_economic_need_Student__c</fullName>
    <inlineHelpText>Student provided documentation of proof for financial assistance</inlineHelpText>
    <label>Eligibility for economic need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>