force-app/main/default/objects/Contact/fields/Email_Account__c.field-meta.xml
<CustomField>
    <fullName>Email_Account__c</fullName>
    <formula>Email &amp; &quot;, &quot; &amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email/Account</label>
    <type>Text</type>
</CustomField>