force-app/main/default/objects/Contact/fields/Employed_full_time_or_part_time__c.field-meta.xml
<CustomField>
    <fullName>Employed_full_time_or_part_time__c</fullName>
    <label>Employed full time or part time?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>