force-app/main/default/objects/Contact/fields/Estimated_Annual_Enrollees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Enrollees__c</fullName>
    <formula>Text( Account.Estimated_Annual_Enrollees__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Enrollees</label>
    <type>Text</type>
</CustomField>