force-app/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Phone extension for business numbers</description>
    <label>Extension</label>
    <length>30</length>
    <type>Text</type>
</CustomField>