force-app/main/default/objects/Contact/fields/Follower_Count__c.field-meta.xml
<CustomField>
    <fullName>Follower_Count__c</fullName>
    <description>Social Care: Follower count of social media user</description>
    <label>Follower Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>