force-app/main/default/objects/Contact/fields/Hours_Since_Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Last_Survey_Sent__c</fullName>
    <description>Hours since last time a survey has been sent to contact.</description>
    <formula>(NOW() - Survey_Last_Sent__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours since last time a survey has been sent to contact.</inlineHelpText>
    <label>Hours Since Last Survey Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>