force-app/main/default/objects/Contact/fields/If_part_time_is_this_by_choice__c.field-meta.xml
<CustomField>
    <fullName>If_part_time_is_this_by_choice__c</fullName>
    <label>If part-time, is this by choice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>