force-app/main/default/objects/Contact/fields/If_yes_pursuing_higher_licensur__c.field-meta.xml
<CustomField>
    <fullName>If_yes_pursuing_higher_licensur__c</fullName>
    <inlineHelpText>If yes, are you pursuing higher licensure in the healthcare field?</inlineHelpText>
    <label>If yes, pursuing higher licensure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>