force-app/main/default/objects/Contact/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will not be used on the page layout but is automatically checked to identify in the PHSS constituent search who is labeled an instructor</description>
    <label>Instructor</label>
    <type>Checkbox</type>
</CustomField>