force-app/main/default/objects/Contact/fields/Keycode__c.field-meta.xml
<CustomField>
    <fullName>Keycode__c</fullName>
    <description>created for April 2015 Direct Marketing campaign run out of Business Operations.  intended to capture 3 character code on Postcards and Letters.</description>
    <inlineHelpText>Keycode for used for marketing purposes.</inlineHelpText>
    <label>Keycode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>