force-app/main/default/objects/Contact/fields/Master_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Constituent_ID__c</fullName>
    <description>This field is used in the CDI search results. The master constituent id is a unique field in the data warehouse.</description>
    <externalId>true</externalId>
    <label>Master Constituent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>