force-app/main/default/objects/Contact/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))&amp; &quot;lightning/r/User/&quot; &amp; $User.Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile</label>
    <type>Text</type>
</CustomField>