force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Resident of Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>