force-app/main/default/objects/Contact/fields/SABA_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>SABA_Birthdate__c</fullName>
    <label>SABA Birthdate</label>
    <type>Date</type>
</CustomField>