force-app/main/default/objects/Contact/fields/SABA_BusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>SABA_BusinessPhone__c</fullName>
    <label>SABA BusinessPhone</label>
    <type>Phone</type>
</CustomField>