force-app/main/default/objects/Contact/fields/SABA_Email__c.field-meta.xml
<CustomField>
    <fullName>SABA_Email__c</fullName>
    <label>SABA Email</label>
    <type>Email</type>
</CustomField>