force-app/main/default/objects/Contact/fields/SABA_FirstName__c.field-meta.xml
<CustomField>
    <fullName>SABA_FirstName__c</fullName>
    <label>SABA FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>