force-app/main/default/objects/Contact/fields/SABA_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>SABA_HomePhone__c</fullName>
    <label>SABA HomePhone</label>
    <type>Phone</type>
</CustomField>