force-app/main/default/objects/Contact/fields/SABA_LastName__c.field-meta.xml
<CustomField>
    <fullName>SABA_LastName__c</fullName>
    <label>SABA LastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>