force-app/main/default/objects/Contact/fields/SABA_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>SABA_MobilePhone__c</fullName>
    <label>SABA MobilePhone</label>
    <type>Phone</type>
</CustomField>