force-app/main/default/objects/Contact/fields/Saba_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Saba_Person_Id__c</fullName>
    <description>This field captures the individuals Person ID from the learning center.</description>
    <inlineHelpText>This field captures the individuals Person ID from the learning center.</inlineHelpText>
    <label>Learning Center ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>