force-app/main/default/objects/Contact/fields/SABA_Salutation__c.field-meta.xml
<CustomField>
    <fullName>SABA_Salutation__c</fullName>
    <label>SABA Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>