force-app/main/default/objects/Contact/fields/State_Format_field__c.field-meta.xml
<CustomField>
    <fullName>State_Format_field__c</fullName>
    <formula>Case(MailingState, 
&quot;AL&quot;,&quot;1&quot;, 
&quot;FL&quot;,&quot;1&quot;, 
&quot;GA&quot;,&quot;1&quot;, 
&quot;LA&quot;,&quot;1&quot;, 
&quot;MS&quot;,&quot;1&quot;, 
&quot;Caribbean&quot;,&quot;1&quot;, 
&quot;PR&quot;,&quot;1&quot;, 
&quot;SC&quot;,&quot;1&quot;, 
&quot;NC&quot;,&quot;1&quot;, 
&quot;VA&quot;,&quot;1&quot;, 
&quot;WV&quot;,&quot;1&quot;, 
&quot;MD&quot;,&quot;1&quot;, 
&quot;DE&quot;,&quot;1&quot;, 
&quot;PA&quot;,&quot;1&quot;, 
&quot;DC&quot;,&quot;1&quot;, 
&quot;MI&quot;,&quot;1&quot;, 
&quot;IN&quot;,&quot;1&quot;, 
&quot;OH&quot;,&quot;1&quot;, 
&quot;KY&quot;,&quot;1&quot;, 
&quot;TN&quot;,&quot;1&quot;, 
&quot;NJ&quot;,&quot;1&quot;, 
&quot;NY&quot;,&quot;1&quot;, 
&quot;CT&quot;,&quot;1&quot;, 
&quot;RI&quot;,&quot;1&quot;, 
&quot;MA&quot;,&quot;1&quot;, 
&quot;VT&quot;,&quot;1&quot;, 
&quot;NH&quot;,&quot;1&quot;, 
&quot;ME&quot;,&quot;1&quot;, 
&quot;WA&quot;,&quot;1&quot;, 
&quot;OR&quot;,&quot;1&quot;, 
&quot;CA&quot;,&quot;1&quot;, 
&quot;AK&quot;,&quot;1&quot;, 
&quot;HI&quot;,&quot;1&quot;, 
&quot;Guam&quot;,&quot;1&quot;, 
&quot;Northern Mariana Islands&quot;,&quot;1&quot;, 
&quot;CO&quot;,&quot;1&quot;, 
&quot;WY&quot;,&quot;1&quot;, 
&quot;AZ&quot;,&quot;1&quot;, 
&quot;OK&quot;,&quot;1&quot;, 
&quot;AR&quot;,&quot;1&quot;, 
&quot;TX&quot;,&quot;1&quot;, 
&quot;UT&quot;,&quot;1&quot;, 
&quot;NV&quot;,&quot;1&quot;, 
&quot;NM&quot;,&quot;1&quot;, 
&quot;ID&quot;,&quot;1&quot;, 
&quot;MT&quot;,&quot;1&quot;, 
&quot;ND&quot;,&quot;1&quot;, 
&quot;SD&quot;,&quot;1&quot;, 
&quot;MN&quot;,&quot;1&quot;, 
&quot;WI&quot;,&quot;1&quot;, 
&quot;IL&quot;,&quot;1&quot;, 
&quot;MO&quot;,&quot;1&quot;, 
&quot;KS&quot;,&quot;1&quot;, 
&quot;NE&quot;,&quot;1&quot;, 
&quot;IA&quot;,&quot;1&quot;,
&quot;Refused&quot;,&quot;1&quot;,
&quot; &quot;,&quot;0&quot;, 
&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Format field</label>
    <type>Text</type>
</CustomField>