force-app/main/default/objects/Contact/fields/Survey_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Last_Sent__c</fullName>
    <description>This field captures the last time a survey was sent via the close case functionality.</description>
    <inlineHelpText>This field captures the last time a survey was sent via the close case functionality.</inlineHelpText>
    <label>Survey Last Sent</label>
    <type>DateTime</type>
</CustomField>