force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Time Zone</fullName>
            </value>
            <value>
                <fullName>Eastern Time Zone</fullName>
            </value>
            <value>
                <fullName>Mountain Time Zone</fullName>
            </value>
            <value>
                <fullName>Pacific Time Zone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>