force-app/main/default/objects/Contact/validationRules/Assistant_Phone_Number_with_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Assistant_Phone_Number_with_10_Digits</fullName>
    <active>true</active>
    <description>Validates that the Phone number is in (999) 999-9999 format. This works by using the REGEX function to check that the number has ten digits in the (999) 999-9999 format.</description>
    <errorConditionFormula>IF( OR(ISBLANK(AssistantPhone),  $Setup.Validation_Rules__c.Bypass_Rules__c), false, NOT(REGEX(AssistantPhone, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
    <errorDisplayField>AssistantPhone</errorDisplayField>
    <errorMessage>US phone numbers should be in this format: (999) 999-9999</errorMessage>
</ValidationRule>