force-app/main/default/objects/Contact/validationRules/Email_Required_for_Billing_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required_for_Billing_Contacts</fullName>
    <active>true</active>
    <description>The Email is required for Billing Contacts. Billing Contacts are determined by the Contact Type, if the Contact Type contains &#39;Billing&#39; then the Contact is considered a Billing Contact.</description>
    <errorConditionFormula>IF( AND( INCLUDES(Contact_Type__c , &#39;Billing&#39;), ISBLANK(Email) ), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>An email address must be provided for the Billing Contact, update Contact record</errorMessage>
</ValidationRule>